chore: remove dropdown animation performance issues on mobile pending resolution

--- a/src/assets/styles/components/dropdowns.css
+++ b/src/assets/styles/components/dropdowns.css
@@ -7,7 +7,7 @@
   @apply text-[14px] text-neutral-4;
   @apply font-body;
   box-shadow: 3px 5px 3px 1px #716f8c1a;
-  animation: swing-in-top-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) alternate forwards;
+  // animation: swing-in-top-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) alternate forwards;
   &__item {
     @apply border-neutral-6;
     @apply flex items-center;
